@@ -1,7 +1,6 @@
 from __future__ import absolute_import
 
 import sys
-from six.moves import reload_module
 
 import pytest
 
